Bug 318425. Make sure the scrolled frame's view is set to include the overflow area of its frame. r+sr=dbaron